# oxideav-pixfmt

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
benches/: pixel_ops.rs  yuv_rgb.rs
src/: alpha.rs  cmyk.rs  convert.rs  format_info.rs  gray.rs  lib.rs  palette.rs  rgb.rs  simd_dispatch.rs  yuv.rs  yuv_simd.rs
src/rgb/: swizzle_simd.rs
src/yuv_simd/: avx2.rs  neon.rs  portable.rs
tests/: alpha.rs  conversions.rs  palette.rs  swizzle_parity.rs  yuv_rgb.rs  yuv_simd_parity.rs
