[package]
name = "oxideav-pixfmt"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust pixel-format conversions, palette quantisation, and dithering — the oxideav framework's shared pixfmt layer"
repository = "https://github.com/OxideAV/oxideav-pixfmt"
homepage = "https://github.com/OxideAV/oxideav-pixfmt"
readme = "README.md"
keywords = ["multimedia", "video", "pixel-format", "color", "yuv"]
categories = ["multimedia::video", "multimedia::images"]

[features]
# Enable the `std::simd` (portable_simd) conversion path. Requires a
# nightly toolchain because `core::simd` is unstable.
nightly = []

[dependencies]
oxideav-core = "0.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "yuv_rgb"
harness = false

[[bench]]
name = "pixel_ops"
harness = false
